Added new env_probe data

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .svn*
-.autosave*
+*autosave*
 *.blend1
 *.blend2
 generated*
@@ -7,3 +7,5 @@ exported*
 screenshots*
 _hide*
 *lightgridpoint*
+_tb/
+*-crash*
